--- a/sopfia/css/styles.css
+++ b/sopfia/css/styles.css
@@ -343,38 +343,38 @@ h1, h2, h3, h4, h5, h6{
     background: rgba(0, 0, 0, 0.6);
 }
 
-.works__wystawy{
+.works__kids{
     display: flex;
     background-image: url(../img/wystawy22.png);;
     grid-area: 1/1/1/3;
 }
 
 @media (max-width: 768px){
-    .works__wystawy{
+    .works__kids{
         grid-area: 1/1/2/2;
     }
 }
 
 @media (max-width: 576px){
-    .works__wystawy{
+    .works__kids{
         grid-area: 1/1/2/2;
     }
 }
 
-.works__warsztaty{
+.works__women{
     background-image: 
     url(../img/ikonyWorkshop.png);
     grid-area: 2/1/2/1;
 }
 
 @media (max-width: 768px){
-    .works__warsztaty{
+    .works__women{
         grid-area: 1/2/2/3;
     }
 }
 
 @media (max-width: 576px){
-    .works__warsztaty{
+    .works__women{
         grid-area: 2/1/3/2;
     }
 }
@@ -397,20 +397,20 @@ h1, h2, h3, h4, h5, h6{
     }
 }
 
-.works__film{
+.works__christening{
     background-image: 
     url(../img/ikonaWork.png);
     grid-area: 2/2/3/3;
 }
 
 @media (max-width: 768px){
-    .works__film{
+    .works__christening{
         grid-area: 2/2/2/3;
     }
 }
 
 @media (max-width: 576px){
-    .works__film{
+    .works__christening{
         grid-area: 4/1/5/2;
     }
 }
